--- a/src/scss/_uswds-theme.scss
+++ b/src/scss/_uswds-theme.scss
@@ -8,8 +8,7 @@ in the form $setting: value,
 */
 
 //
-//  @use "uswds-core" with (
-//    $setting: value,
-//    $setting: value
-//  );
-//
+@use "uswds-core" with (
+    $theme-image-path: "../uswds/img",
+    $theme-font-path: "../uswds/fonts",
+);
