--- a/src/scss/_uswds-theme-custom-styles.scss
+++ b/src/scss/_uswds-theme-custom-styles.scss
@@ -21,3 +21,8 @@ i.e.
 */
 
 @use "uswds-core" as *;
+
+// Add custom SASS to the Directory named "RENAME-ME"
+// If using the directory named "RENAME-ME" for custom SASS
+// uncomment the following line to include the custom SASS
+// @use "RENAME-ME/styles.scss";
